--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -24,9 +24,9 @@
   font-family: 'Pacifico', cursive;
   font-size: 24px;
   margin-bottom: 32px;
-  padding-left: 0;
+  padding-left: 12px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
 .sidebar:hover .sidebar__logo {
@@ -43,6 +43,7 @@
 .sidebar:hover .sidebar__logo a {
   justify-content: flex-start;
 }
+
 
 .sidebar__nav {
   display: flex;
